--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       color: #2e2e2e;
     }
     header {
-      background: linear-gradient(to right, #006837, #ffcc00, #c62828);
+      background: linear-gradient(to right, #006837, #dedede, #c62828);
       color: white;
       padding: 1em;
       text-align: center;
