--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
     header {
       background: linear-gradient(to right, #006837, #dedede, #c62828);
-      color: white;
+      color: black;
       padding: 1em;
       text-align: center;
       font-size: 1.8em;
