--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     .tabs {
       display: flex;
       flex-wrap: wrap;
-      background-color: #ffcc00;
+      background-color: #ad880c;
       justify-content: center;
     }
     .tab-button {
