--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
     header {
       background: linear-gradient(to right, #006837, #dedede, #c62828);
-      color: grey;
+      color: brown;
       padding: 1em;
       text-align: center;
       font-size: 1.8em;
@@ -52,7 +52,7 @@
     .tabs {
       display: flex;
       flex-wrap: wrap;
-      background-color: #ad880c;
+      background-color: #4a4a48;
       justify-content: center;
     }
     .tab-button {
