--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       color: #2e2e2e;
     }
     header {
-      background: linear-gradient(to right, #006837, #dedede, #c62828);
-      color: brown;
+      background: linear-gradient(to right, #015400, #dedede, #780202);
+      color: orange;
       padding: 1em;
       text-align: center;
       font-size: 1.8em;
@@ -61,14 +61,14 @@
       border: none;
       background: none;
       font-weight: bold;
-      color: #006837;
+      color: #00260e;
       transition: background 0.3s, color 0.3s;
     }
     .tab-button:hover {
-      background-color: #fff3cd;
+      background-color: #4d4c49;
     }
     .tab-button.active {
-      background-color: #006837;
+      background-color: #756a06;
       color: white;
       border-radius: 5px 5px 0 0;
     }
@@ -85,8 +85,8 @@
       display: block;
     }
     .paquete {
-      background-color: #fffbe6;
-      border-left: 8px solid #ff6f00;
+      background-color: #3b3b3b;
+      border-left: 8px solid #756a06;
       margin: 1em 0;
       padding: 1.5em;
       border-radius: 10px;
