--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       background-color: #4d4c49;
     }
     .tab-button.active {
-      background-color: #756a06;
+      background-color: #b09b30;
       color: white;
       border-radius: 5px 5px 0 0;
     }
@@ -86,7 +86,7 @@
     }
     .paquete {
       background-color: #3b3b3b;
-      border-left: 8px solid #756a06;
+      border-left: 8px solid #b09b30;
       margin: 1em 0;
       padding: 1.5em;
       border-radius: 10px;
@@ -94,7 +94,7 @@
     }
     .paquete h3 {
       margin-top: 0;
-      color: #c62828;
+      color: #b09b30;
     }
     .paquete p {
       margin: 0.5em 0 1em;
@@ -114,7 +114,7 @@
     }
     .ordenar {
       margin-top: 1em;
-      background-color: #c62828;
+      background-color: #b09b30;
       color: white;
       border: none;
       padding: 10px 20px;
@@ -129,7 +129,7 @@
     .total {
       margin-top: 10px;
       font-weight: bold;
-      color: #006837;
+      color: #b09b30;
     }
     label {
       display: block;
