--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body {
       font-family: 'Rubik', sans-serif;
-      background: linear-gradient(to bottom right, #ffffff, #f7efe0);
+      background: linear-gradient(to bottom right, #424242, #f7efe0);
       margin: 0;
       padding: 0;
       color: #2e2e2e;
