--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       background: linear-gradient(to bottom right, #424242, #424242);
       margin: 0;
       padding: 0;
-      color: #2e2e2e;
+      color: #baab47;
     }
     header {
       background: linear-gradient(to right, #015400, #dedede, #780202);
@@ -68,7 +68,7 @@
       background-color: #4d4c49;
     }
     .tab-button.active {
-      background-color: #b09b30;
+      background-color: #baab47;
       color: white;
       border-radius: 5px 5px 0 0;
     }
@@ -86,7 +86,7 @@
     }
     .paquete {
       background-color: #3b3b3b;
-      border-left: 8px solid #b09b30;
+      border-left: 8px solid #baab47;
       margin: 1em 0;
       padding: 1.5em;
       border-radius: 10px;
@@ -94,7 +94,7 @@
     }
     .paquete h3 {
       margin-top: 0;
-      color: #b09b30;
+      color: #baab47;
     }
     .paquete p {
       margin: 0.5em 0 1em;
@@ -114,7 +114,7 @@
     }
     .ordenar {
       margin-top: 1em;
-      background-color: #b09b30;
+      background-color: #baab47;
       color: white;
       border: none;
       padding: 10px 20px;
@@ -129,7 +129,7 @@
     .total {
       margin-top: 10px;
       font-weight: bold;
-      color: #b09b30;
+      color: #baab47;
     }
     label {
       display: block;
