--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       letter-spacing: 1px;
     }
     .nombre-container {
-      background-color: #fff3cd;
+      background-color: #3b3b3b;
       padding: 2em;
       text-align: center;
       height: 100vh;
@@ -40,8 +40,8 @@
       margin-top: 1em;
       padding: 0.6em 1.5em;
       font-size: 1em;
-      background-color: #c62828;
-      color: white;
+      background-color: #baab47;
+      color: black;
       border: none;
       border-radius: 5px;
       cursor: pointer;
