--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       border: none;
       background: none;
       font-weight: bold;
-      color: #00260e;
+      color: #baab47;
       transition: background 0.3s, color 0.3s;
     }
     .tab-button:hover {
@@ -75,8 +75,8 @@
     .tab-content {
       display: none;
       padding: 2em;
-      background-color: #fff;
-      border: 2px solid #006837;
+      background-color: #0000;
+      border: 2px solid #9ea3a1;
       margin: 0 auto;
       max-width: 800px;
       border-top: none;
