--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       display: flex;
       flex-wrap: wrap;
       background-color: #4a4a48;
-      justify-content: center;
+      justify-content: cent9ea3a1er;
     }
     .tab-button {
       padding: 10px 16px;
@@ -65,7 +65,7 @@
       transition: background 0.3s, color 0.3s;
     }
     .tab-button:hover {
-      background-color: #4d4c49;
+      background-color: #20402e;
     }
     .tab-button.active {
       background-color: #baab47;
@@ -76,7 +76,7 @@
       display: none;
       padding: 2em;
       background-color: #0000;
-      border: 2px solid #9ea3a1;
+      border: 2px solid #20402e;
       margin: 0 auto;
       max-width: 800px;
       border-top: none;
