--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body {
       font-family: 'Rubik', sans-serif;
-      background: linear-gradient(to bottom right, #424242, #424242);
+      background: linear-gradient(to bottom right, #20402e, #20402e);
       margin: 0;
       padding: 0;
       color: #baab47;
@@ -61,7 +61,7 @@
       border: none;
       background: none;
       font-weight: bold;
-      color: #baab47;
+      color: #20402e;
       transition: background 0.3s, color 0.3s;
     }
     .tab-button:hover {
