--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
       border: none;
       background: none;
       font-weight: bold;
-      color: #20402e;
+      color: #baab47;
       transition: background 0.3s, color 0.3s;
     }
     .tab-button:hover {
       background-color: #20402e;
     }
     .tab-button.active {
-      background-color: #baab47;
+      background-color: #20402e;
       color: white;
       border-radius: 5px 5px 0 0;
     }
