--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       color: #baab47;
     }
     header {
-      background: linear-gradient(to right, #015400, #dedede, #780202);
+      background: linear-gradient(to right, #303030, #bda86f, #303030);
       color: orange;
       padding: 1em;
       text-align: center;
@@ -40,7 +40,7 @@
       margin-top: 1em;
       padding: 0.6em 1.5em;
       font-size: 1em;
-      background-color: #baab47;
+      background-color: #bf9626;
       color: black;
       border: none;
       border-radius: 5px;
@@ -86,7 +86,7 @@
     }
     .paquete {
       background-color: #3b3b3b;
-      border-left: 8px solid #baab47;
+      border-left: 8px solid #bf9626;
       margin: 1em 0;
       padding: 1.5em;
       border-radius: 10px;
@@ -94,7 +94,7 @@
     }
     .paquete h3 {
       margin-top: 0;
-      color: #baab47;
+      color: #bf9626;
     }
     .paquete p {
       margin: 0.5em 0 1em;
@@ -114,7 +114,7 @@
     }
     .ordenar {
       margin-top: 1em;
-      background-color: #baab47;
+      background-color: #bf9626;
       color: white;
       border: none;
       padding: 10px 20px;
@@ -129,7 +129,7 @@
     .total {
       margin-top: 10px;
       font-weight: bold;
-      color: #baab47;
+      color: #bf9626;
     }
     label {
       display: block;
