--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       background: linear-gradient(to bottom right, #20402e, #20402e);
       margin: 0;
       padding: 0;
-      color: #baab47;
+      color: #bf9626;
     }
     header {
       background: linear-gradient(to right, #303030, #bda86f, #303030);
-      color: orange;
+      color: aba587;
       padding: 1em;
       text-align: center;
       font-size: 1.8em;
@@ -61,7 +61,7 @@
       border: none;
       background: none;
       font-weight: bold;
-      color: #baab47;
+      color: #bf9626;
       transition: background 0.3s, color 0.3s;
     }
     .tab-button:hover {
