--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
     header {
       background: linear-gradient(to right, #303030, #bda86f, #303030);
-      color: 9e9e9e;
+      color: #9e9e9e;
       padding: 1em;
       text-align: center;
       font-size: 1.8em;
