--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
       transition: background 0.3s, color 0.3s;
     }
     .tab-button:hover {
-      background-color: #20402e;
+      background-color: #bda86f;
     }
     .tab-button.active {
-      background-color: #20402e;
+      background-color: #bda86f;
       color: white;
       border-radius: 5px 5px 0 0;
     }
@@ -76,7 +76,7 @@
       display: none;
       padding: 2em;
       background-color: #141414;
-      border: 2px solid #20402e;
+      border: 2px solid #bda86f;
       margin: 0 auto;
       max-width: 800px;
       border-top: none;
