--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body {
       font-family: 'Rubik', sans-serif;
-      background: linear-gradient(to bottom right, #20402e, #20402e);
+      background: linear-gradient(to bottom right, #bda86f, #bda86f);
       margin: 0;
       padding: 0;
       color: #bf9626;
