--- a/index.html
+++ b/index.html
@@ -168,90 +168,90 @@
 <!-- TAQUIZA -->
 <div id="taquiza" class="tab-content active">
   <div class="paquete">
-    <h3>Taquiza Básica - $90 por persona</h3>
+    <h3>Taquiza Básica</h3>
     <p>Complementos: salsa verde y roja, habaneros con cebolla morada o piña, queso, tortilla de máquina.</p>
     <input type="number" id="personas1" placeholder="Mínimo 30 personas" min="30" oninput="calcularTotal(1, 90)">
     <div class="error" id="error1"></div>
     <div class="total" id="total1"></div>
-    <button class="ordenar" onclick="ordenar(1, 90, 'Taquiza Básica')">Ordenar</button>
+    <button class="ordenar" onclick="ordenar(1, 90, 'Taquiza Básica')">Cotizar</button>
   </div>
   <div class="paquete">
-    <h3>Taquiza Premium - $130 por persona</h3>
+    <h3>Taquiza Premium</h3>
     <p>Complementos: salsa verde y roja, habaneros con cebolla morada o piña, queso, tortilla hecha a mano en el momento.</p>
     <input type="number" id="personas2" placeholder="Mínimo 30 personas" min="30" oninput="calcularTotal(2, 130)">
     <div class="error" id="error2"></div>
     <div class="total" id="total2"></div>
-    <button class="ordenar" onclick="ordenar(2, 130, 'Taquiza Premium')">Ordenar</button>
+    <button class="ordenar" onclick="ordenar(2, 130, 'Taquiza Premium')">Cotizar</button>
   </div>
 </div>
 
 <!-- CHILAQUILES -->
 <div id="chilaquiles" class="tab-content">
   <div class="paquete">
-    <h3>Chilaquiles - $90 por persona</h3>
+    <h3>Chilaquiles</h3>
     <p>Incluye: chilaquiles, queso, crema, proteina, porción de frijoles.</p>
     <label><input type="radio" name="chilaquiles_opcion" value="normales"> Rojos</label>
     <label><input type="radio" name="chilaquiles_opcion" value="gratinados"> Suizos</label>
     <input type="number" id="personas3" placeholder="Mínimo 30 personas" min="30" oninput="calcularTotal(3, 90)">
     <div class="error" id="error3"></div>
     <div class="total" id="total3"></div>
-    <button class="ordenar" onclick="ordenarChilaquiles(3, 90)">Ordenar</button>
+    <button class="ordenar" onclick="ordenarChilaquiles(3, 90)">Cotizar</button>
   </div>
 </div>
 
 <!-- ENCHILADAS -->
 <div id="enchiladas" class="tab-content">
   <div class="paquete">
-    <h3>Enchiladas Básicas - $130 por persona</h3>
+    <h3>Enchiladas Básicas</h3>
     <p>Incluye: 3 salsas a elección, 6 enchiladas, frijoles, queso, crema, aguacate y porción de cecina.</p>
     <input type="number" id="personas4" placeholder="Mínimo 30 personas" min="30" oninput="calcularTotal(4, 130)">
     <div class="error" id="error4"></div>
     <div class="total" id="total4"></div>
-    <button class="ordenar" onclick="ordenar(4, 130, 'Enchiladas Básicas')">Ordenar</button>
+    <button class="ordenar" onclick="ordenar(4, 130, 'Enchiladas Básicas')">Cotizar</button>
   </div>
   <div class="paquete">
-    <h3>Enchiladas Premium - $160 por persona</h3>
+    <h3>Enchiladas Premium</h3>
     <p>Incluye: 4 salsas a elección, enchiladas ilimitadas, frijoles, queso, crema, aguacate y porción de cecina.</p>
     <input type="number" id="personas5" placeholder="Mínimo 30 personas" min="30" oninput="calcularTotal(5, 160)">
     <div class="error" id="error5"></div>
     <div class="total" id="total5"></div>
-    <button class="ordenar" onclick="ordenar(5, 160, 'Enchiladas Premium')">Ordenar</button>
+    <button class="ordenar" onclick="ordenar(5, 160, 'Enchiladas Premium')">Cotizar</button>
   </div>
 </div>
 
 <!-- ANTOJITOS -->
 <div id="antojitos" class="tab-content">
   <div class="paquete">
-    <h3>Antojitos Mexicanos - $160 por persona</h3>
+    <h3>Antojitos Mexicanos</h3>
     <p>Incluye: un pozole chico, 6 piezas de antojitos con sus complementos.</p>
     <input type="number" id="personas6" placeholder="Mínimo 30 personas" min="30" oninput="calcularTotal(6, 160)">
     <div class="error" id="error6"></div>
     <div class="total" id="total6"></div>
-    <button class="ordenar" onclick="ordenar(6, 160, 'Antojitos Mexicanos')">Ordenar</button>
+    <button class="ordenar" onclick="ordenar(6, 160, 'Antojitos Mexicanos')">Cotizar</button>
   </div>
 </div>
 
 <!-- POZOLE -->
 <div id="pozole" class="tab-content">
   <div class="paquete">
-    <h3>Pozole Rojo - $90 por persona</h3>
+    <h3>Pozole Rojo</h3>
     <p>Incluye: lechuga, cebolla, rábanos, orégano, chilito, limones, crema, tostadas, desechables.</p>
     <input type="number" id="personas7" placeholder="Mínimo 30 personas" min="30" oninput="calcularTotal(7, 90)">
     <div class="error" id="error7"></div>
     <div class="total" id="total7"></div>
-    <button class="ordenar" onclick="ordenar(7, 90, 'Pozole Rojo')">Ordenar</button>
+    <button class="ordenar" onclick="ordenar(7, 90, 'Pozole Rojo')">Cotizar</button>
   </div>
 </div>
 
 <!-- QUESADILLAS -->
 <div id="quesadillas" class="tab-content">
   <div class="paquete">
-    <h3>Servicio de Quesadillas - $90 por persona</h3>
+    <h3>Servicio de Quesadillas</h3>
     <p>Incluye: 4 quesadillas (2 de queso asadero y 2 de deshebrada o pollo), lechuga, queso, crema, aguacate, cebolla, tomate, salsas y zanahoria.</p>
     <input type="number" id="personas8" placeholder="Mínimo 30 personas" min="30" oninput="calcularTotal(8, 90)">
     <div class="error" id="error8"></div>
     <div class="total" id="total8"></div>
-    <button class="ordenar" onclick="ordenar(8, 90, 'Quesadillas')">Ordenar</button>
+    <button class="ordenar" onclick="ordenar(8, 90, 'Quesadillas')">Cotizar</button>
   </div>
 </div>
   </div>
